--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
+        buildConfigField 'String', 'UNSPLASH_CLIENT_ID', '"651cbef2b376e5d4e1f259ccd1ce60086ba09ba03bc345fb8a032c5195b0a706"'
     }
     buildTypes {
         release {
@@ -26,6 +27,10 @@ android {
         androidTest.java.srcDirs += 'src/androidTest/kotlin'
 //        test.java.srcDirs += 'src/test/kotlin'
     }
+//    compileOptions {
+//        targetCompatibility 1.8
+//        sourceCompatibility 1.8
+//    }
 }
 
 dependencies {
@@ -45,7 +50,7 @@ dependencies {
 
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.github.ajalt:flexadapter:2.0.1'
-    compile 'com.github.clans:fab:1.6.4'
+    compile 'com.dmitrymalkovich.android:progress-fab:1.6'
     compile 'com.github.chrisbanes:PhotoView:2.0.0'
 
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
@@ -57,6 +62,9 @@ dependencies {
     compile "com.squareup.retrofit2:converter-gson:$retrofit_version"
     compile "io.reactivex.rxjava2:rxjava:$rxjava_version"
     compile "io.reactivex.rxjava2:rxandroid:$rxandroid_version"
+    compile('com.github.ihsanbal:LoggingInterceptor:2.0.0') {
+        exclude group: 'org.json', module: 'json'
+    }
 }
 repositories {
     mavenCentral()
