--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
-        buildConfigField 'String', 'UNSPLASH_CLIENT_ID', '"651cbef2b376e5d4e1f259ccd1ce60086ba09ba03bc345fb8a032c5195b0a706"'
+        buildConfigField 'String', 'UNSPLASH_CLIENT_ID', '"YOUR_CLIENT_ID"'
     }
     buildTypes {
         release {
@@ -39,7 +39,6 @@ dependencies {
     compile "com.android.support:cardview-v7:$support_version"
     compile "com.android.support:support-vector-drawable:$support_version"
 
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:2.7.19'
 
