--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,10 @@ android {
         main.java.srcDirs += 'src/main/kotlin'
         androidTest.java.srcDirs += 'src/androidTest/kotlin'
     }
+
+    lintOptions {
+          abortOnError false
+      }
 }
 
 dependencies {
