--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,19 +2,21 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'me.tatarka.retrolambda'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    compileSdkVersion rootProject.setup.compileSdk
+    buildToolsVersion rootProject.setup.buildTools
     defaultConfig {
         applicationId "id.paniclabs.kotlinmvp"
-        minSdkVersion 16
-        targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion rootProject.setup.minSdk
+        targetSdkVersion rootProject.setup.targetSdk
+        versionCode rootProject.setup.vcode
+        versionName rootProject.setup.vname
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
-        buildConfigField 'String', 'UNSPLASH_CLIENT_ID', '"YOUR_CLIENT_ID"'
+        buildConfigField 'String', 'UNSPLASH_CLIENT_ID', '"651cbef2b376e5d4e1f259ccd1ce60086ba09ba03bc345fb8a032c5195b0a706"'
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -30,39 +32,55 @@ android {
     lintOptions {
           abortOnError false
       }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
+    //Kotlin
+    compile kotlinLib
+
+    //Dependency Injection
+    compile dagger
+    kapt daggerApt
+
+    //Android Support Library//
+    compile supportAppCompat
+    compile supportRecyclerView
+    compile supportDesign
+    compile supportCardView
+    compile supportVector
+
+    //Retrofit and RxJava
+    compile retrofit
+    compile retrofitAdapter
+    compile retrofitGsonConverter
+    compile rxJava
+    compile rxAndroid
+
+    //Other Library
+    compile glide
+    compile MDColor
+    compile loggers
+    compile flexAdapter
+    compile photoView
+    compile progressFab
+    compile rxPermissions
+    compile rxDownload
+    compile practicalrecyclerview
+    compile(okHttpLogging) {
+        exclude group: 'org.json', module: 'json'
+    }
+
+    //Unit Test
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile "com.android.support:appcompat-v7:$support_version"
-    compile "com.android.support:recyclerview-v7:$support_version"
-    compile "com.android.support:design:$support_version"
-    compile "com.android.support:cardview-v7:$support_version"
-    compile "com.android.support:support-vector-drawable:$support_version"
-
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:2.7.19'
-
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.github.ajalt:flexadapter:2.0.1'
-    compile 'com.dmitrymalkovich.android:progress-fab:1.6'
-    compile 'com.github.chrisbanes:PhotoView:2.0.0'
-
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    compile "com.google.dagger:dagger:$dagger_version"
-    kapt "com.google.dagger:dagger-compiler:$dagger_version"
-
-    compile "com.squareup.retrofit2:retrofit:$retrofit_version"
-    compile "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
-    compile "com.squareup.retrofit2:converter-gson:$retrofit_version"
-    compile "io.reactivex.rxjava2:rxjava:$rxjava_version"
-    compile "io.reactivex.rxjava2:rxandroid:$rxandroid_version"
-    compile('com.github.ihsanbal:LoggingInterceptor:2.0.0') {
-        exclude group: 'org.json', module: 'json'
-    }
 }
 repositories {
     mavenCentral()
