--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
+apply from: 'dependencies.gradle'
+ext {
+    setup = [compileSdk: 25,
+             buildTools: "25.0.3",
+             minSdk    : 16,
+             targetSdk : 25,
+             vcode     : 1,
+             vname     : "1.0.0"]
+}
 buildscript {
     ext.kotlin_version = '1.1.1'
     repositories {
@@ -8,24 +16,20 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
+        classpath 'me.tatarka:gradle-retrolambda:3.5.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
 
 allprojects {
+    tasks.withType(Javadoc) {
+        options.addStringOption('Xdoclint:none', '-quiet')
+        options.addStringOption('encoding', 'UTF-8')
+    }
     repositories {
         jcenter()
     }
-}
-
-ext {
-    support_version = '25.3.1'
-    retrofit_version = '2.2.0'
-    rxjava_version = '2.0.7'
-    rxandroid_version = '2.0.1'
-    dagger_version = '2.2'
 }
 
 task clean(type: Delete) {
